--- a/src/app/personnels/info-person/info.component.html
+++ b/src/app/personnels/info-person/info.component.html
@@ -1,122 +1,127 @@
-<!--Sơ yếu lí lịch -->
-<div id="app-curriculum-vitae">
-  <app-curriculum-vitae></app-curriculum-vitae>
+<div id="info-container">
+  <!--<div class="action-form mgb-40" >-->
+    <!--<button (click)="print()">Print</button>-->
+  <!--</div>-->
+  <!--Sơ yếu lí lịch -->
+  <div id="app-curriculum-vitae">
+    <app-curriculum-vitae></app-curriculum-vitae>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--Đảng đoàn công đoàn -->
+  <div id="app-party-union">
+    <app-party-union></app-party-union>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--Quan hệ gia đình -->
+  <div id="app-family-relationship">
+    <app-family-relationship></app-family-relationship>
+  </div>
+  <div class="placholder"></div>
+
+  <!--thong tin hop dong-->
+  <div id="app-contract">
+    <app-contract></app-contract>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--Qúa trình làm việc -->
+  <div id="app-process-work">
+    <app-process-work></app-process-work>
+  </div>
+  <div class="placholder"></div>
+
+
+  <div id="app-politic-language-technology">
+    <!--Trinh độ ngoại ngữ -->
+    <app-foreign-language></app-foreign-language>
+    <!--Trinh do chinh tri-->
+    <app-politic></app-politic>
+    <!--Trinh do tin hoc -->
+    <app-info-technology></app-info-technology>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--kỷ luật khen thưởng -->
+  <div id="app-bonus-discipline">
+    <app-bonus-discipline></app-bonus-discipline>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--Học hàm , danh hiệu nhà giáo -->
+  <div id="app-academic-rank">
+    <app-academic-rank></app-academic-rank>
+  </div>
+
+  <div class="placholder"></div>
+  <!--QUas tring giang day-->
+  <div id="app-process-teaching">
+    <app-process-teaching></app-process-teaching>
+  </div>
+  <div class="placholder"></div>
+
+  <!--danh hieu thi dua -->
+  <div id="app-emulation-title">
+    <app-emulation-title></app-emulation-title>
+  </div>
+
+  <div class="placholder"></div>
+  <!--nhap thong tin nghach l-uong-->
+  <div id="app-salary-brief">
+    <app-salary-brief></app-salary-brief>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--QUa trinh di nuoc ngoai-->
+  <div id="app-foreign">
+    <app-foreign></app-foreign>
+  </div>
+
+  <div class="placholder"></div>
+
+  <!--Huong dan luan van-->
+  <div id="app-thesis-guide">
+    <app-thesis-guide></app-thesis-guide>
+  </div>
+  <div class="placholder"></div>
+
+  <!-- De tai khoa hoc -->
+  <div id="app-science-topic">
+    <app-science-topic></app-science-topic>
+  </div>
+  <div class="placholder"></div>
+
+  <!--Bao cao, bai bao khoa hoc -->
+  <div id="app-senimar-newpaper">
+    <app-senimar-newpaper></app-senimar-newpaper>
+  </div>
+  <div class="placholder"></div>
+
+  <!--Qua trinh phat minh sang che -->
+  <div id="app-process-evention">
+    <app-process-evention></app-process-evention>
+  </div>
+  <div class="placholder"></div>
+  <!--Hoat dong xuat ban -->
+  <div id="app-publish-info">
+    <app-publish-info></app-publish-info>
+  </div>
+  <div class="placholder"></div>
+
+  <!--Qua trinh dao tao-->
+  <div id="app-train">
+    <app-train></app-train>
+  </div>
+
+  <div class="placholder"></div>
 </div>
-
-<div class="placholder"></div>
-
-<!--Đảng đoàn công đoàn -->
-<div id="app-party-union">
-  <app-party-union></app-party-union>
-</div>
-
-<div class="placholder"></div>
-
-<!--Quan hệ gia đình -->
-<div id="app-family-relationship">
-  <app-family-relationship></app-family-relationship>
-</div>
-<div class="placholder"></div>
-
-<!--thong tin hop dong-->
-<div id="app-contract">
-  <app-contract></app-contract>
-</div>
-
-<div class="placholder"></div>
-
-<!--Qúa trình làm việc -->
-<div id="app-process-work">
-  <app-process-work></app-process-work>
-</div>
-<div class="placholder"></div>
-
-
-<div id="app-politic-language-technology">
-  <!--Trinh độ ngoại ngữ -->
-  <app-foreign-language></app-foreign-language>
-  <!--Trinh do chinh tri-->
-  <app-politic></app-politic>
-  <!--Trinh do tin hoc -->
-  <app-info-technology></app-info-technology>
-</div>
-
-<div class="placholder"></div>
-
-<!--kỷ luật khen thưởng -->
-<div id="app-bonus-discipline">
-  <app-bonus-discipline></app-bonus-discipline>
-</div>
-
-<div class="placholder"></div>
-
-<!--Học hàm , danh hiệu nhà giáo -->
-<div id="app-academic-rank">
-  <app-academic-rank></app-academic-rank>
-</div>
-
-<div class="placholder"></div>
-<!--QUas tring giang day-->
-<div id="app-process-teaching">
-  <app-process-teaching></app-process-teaching>
-</div>
-<div class="placholder"></div>
-
-<!--danh hieu thi dua -->
-<div id="app-emulation-title">
-  <app-emulation-title></app-emulation-title>
-</div>
-
-<div class="placholder"></div>
-<!--nhap thong tin nghach l-uong-->
-<div id="app-salary-brief">
-  <app-salary-brief></app-salary-brief>
-</div>
-
-<div class="placholder"></div>
-
-<!--QUa trinh di nuoc ngoai-->
-<div id="app-foreign">
-  <app-foreign></app-foreign>
-</div>
-
-<div class="placholder"></div>
-
-<!--Huong dan luan van-->
-<div id="app-thesis-guide">
-  <app-thesis-guide></app-thesis-guide>
-</div>
-<div class="placholder"></div>
-
-<!-- De tai khoa hoc -->
-<div id="app-science-topic">
-  <app-science-topic></app-science-topic>
-</div>
-<div class="placholder"></div>
-
-<!--Bao cao, bai bao khoa hoc -->
-<div id="app-senimar-newpaper">
-  <app-senimar-newpaper></app-senimar-newpaper>
-</div>
-<div class="placholder"></div>
-
-<!--Qua trinh phat minh sang che -->
-<div id="app-process-evention">
-  <app-process-evention></app-process-evention>
-</div>
-<div class="placholder"></div>
-<!--Hoat dong xuat ban -->
-<div id="app-publish-info">
-  <app-publish-info></app-publish-info>
-</div>
-<div class="placholder"></div>
-
-<!--Qua trinh dao tao-->
-<div id="app-train">
-  <app-train></app-train>
-</div>
-
-<div class="placholder"></div>
 
 
 <!--&lt;!&ndash;lưu ý form&ndash;&gt;-->
