--- a/src/app/test-person.html
+++ b/src/app/test-person.html
@@ -86,3 +86,4 @@
   <!--&lt;!&ndash;Sơ yếu lí lịch &ndash;&gt;-->
   <!--<app-curriculum-vitae></app-curriculum-vitae>-->
 <!--</div>-->
+<div app-top></div>
