--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
@@ -10,110 +10,136 @@
   </modal-header>
 
   <modal-body>
-    <form action="" class="mgb-i-10" [formGroup]="formData">
-      <div class="row">
-
-        <div class="col-xs-12 col-sm-6 col-sm-offset-3 ">
-          <div class="item-control">
-            <label>Họ tên: </label>
-            <input type="text" required formControlName="fullName">
+    <form [formGroup]="formData" style="border-color: transparent" id="form-edit-user">
+      <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+        <div class="form-item">
+          <div class="form-item-title">
+            Cập nhật thông tin tài khoản
           </div>
+
 
           <div class="item-control">
             <label>Mã cán bộ: </label>
-            <input type="text" required formControlName="personnelCode">
+            <input type="text" class="form-control" disabled required formControlName="personnelCode" #personnelCode
+                   ngModel>
+            <!--{{formData.forms.personnelCode.touched}}-->
           </div>
 
           <div class="item-control">
-            <label>Tên đăng nhập: </label>
-            <input type="text" required formControlName="acountSignIn">
+            <label> Chọn đợn vị cấp 1 </label>
+            <select class="form-control" required #level1 formControlName="level1" #level1
+                    (click)="level1Change(level1.value)">
+              <option *ngFor="let item of listLevel1" [value]="item._id">{{item.name}}</option>
+            </select>
           </div>
           <div class="item-control">
-            <label>Mật khẩu: </label>
-            <input [type]="showPass == true?'text':'password'" required formControlName="passWord">
+            <div class="error" *ngIf="level1.value.trim() == '' && formTouched">Chưa chọn đơn vị cấp 1</div>
           </div>
+
+          <div class="item-control">
+            <label>Chọn đơn vị cấp 2</label>
+            <select class="form-control" required formControlName="level2">
+              <option *ngFor="let item of listLevel2" [value]="item._id"> {{item.name}}</option>
+            </select>
+          </div>
+
+
+          <div class="item-control">
+            <div class="error" *ngIf="personnelCode.value.trim() == '' && formTouched">Chưa nhập mã cán bộ</div>
+            <div class="error" *ngIf="personnelCode.value.trim().length <6
+         && formTouched && personnelCode.value.trim() != ''">Mã cán bộ tối thiểu 6 kí tự
+            </div>
+          </div>
+
+          <div class="item-control">
+            <label>Họ tên: </label>
+            <input type="text" required class="form-control" #fullName formControlName="fullName">
+
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="fullName.value.trim() == '' && formTouched">Chưa nhập họ tên</div>
+          </div>
+
+          <div class="item-control">
+            <label>Ngày sinh: </label>
+            <input type="date" required class="form-control" #birthDay formControlName="birthDay">
+
+          </div>
+
+
+          <div class="item-control">
+            <div class="error" *ngIf="birthDay.value.trim() == '' && formTouched">Chưa nhập ngày sinh</div>
+          </div>
+
+          <div class="item-control">
+            <label>Giới tính : </label>
+            <select name="sex" required class="form-control" #sex formControlName="sex">
+              <option value="0">Nam</option>
+              <option value="1">Nữ</option>
+            </select>
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="sex.value.trim() == '' && formTouched">Chưa chọn giới tính</div>
+          </div>
+
+          <div class="item-control">
+            <label>Email: </label>
+            <input type="email" required pattern="^\w+([\.-_]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" class="form-control"
+                   #email formControlName="email">
+
+          </div>
+
+
+          <div class="item-control">
+            <div class="error" *ngIf="!validEmail(email.value) && formTouched">Email phải đúng định abc@xx...</div>
+          </div>
+
+          <div class="item-control">
+            <label>Mật khẩu: </label>
+            <input class="form-control " style="width: 70%" [type]="showPass == true?'text':'password'" #passWord
+                   required formControlName="passWord">
+
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="passWord.value.trim() == '' && formTouched">Chưa nhập mật khẩu</div>
+          </div>
+
           <div class="item-control">
             <label>Hiện rõ </label>
             <input type="checkbox" style="width: 42%" (change)="showPass = !showPass ">
           </div>
+
           <div class="item-control">
-            <label>Nhập lại<br class="hidden-xs"> mật khẩu: </label>
-            <input type="password" required formControlName="rePassWord">
+            <label>Nhập lại mật khẩu: </label>
+            <input [type]="showPass == true?'text':'password'" (change)="rePassTouch = true" #rePassWord
+                   class="form-control" formControlName="rePassWord">
+          </div>
+
+          <div class="item-control">
+            <div class="error" *ngIf="!rePassTouch && passWord.value.trim() != ''" >
+              Nhập lại mật khẩu
+            </div>
+            <div class="error"
+                 *ngIf="rePassTouch && passWord.value.trim() != '' && rePassWord.value!= passWord.value && formTouched">
+              Mật khẩu không trùng nhau
+            </div>
+          </div>
+
+          <div class="action-form mgt-30 mgt-sm-50 text-center">
+            <div *ngIf="message.condition  " [ngClass]="'alert alert-'+ message.type">
+              {{message.content}}
+            </div>
+            <button (click)="onSubmit()" type="submit">Cập nhật</button>
+            <button (click)="resetForm(formData)">Xóa</button>
           </div>
         </div>
-
       </div>
+      <div class="clearfix"></div>
     </form>
   </modal-body>
 
-  <modal-footer>
-    <button class="btn-action" (click)="addItem()">Cập nhật</button>
-  </modal-footer>
-
 </modal>
 
-
-<!--<form style="border: none;padding: 0" [formGroup]="formSearch">-->
-  <!--<div class="row">-->
-    <!--<div class="col-xs-12">-->
-      <!--<div class="form-item">-->
-        <!--<div class="form-item-title">-->
-          <!--Tìm kiếm-->
-        <!--</div>-->
-        <!--<div class="item-control">-->
-          <!--<label>Phòng ban </label>-->
-          <!--<select class="form-control" formControlName="department">-->
-            <!--<option value="">-&#45;&#45;Quan tri mang va an ninh he thong</option>-->
-          <!--</select>-->
-        <!--</div>-->
-        <!--<div class="item-control">-->
-          <!--<label class=" " style="margin-right: 123px;">Nhập tên hoặc mã cán bộ để kiếm </label>-->
-          <!--<input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">-->
-          <!--<button class="btn-action" (click)="onSearch()">Tìm kiếm</button>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-    <!--<div class="col-xs-12 ">-->
-      <!--<div class="form-item">-->
-        <!--<div class="form-item-title">-->
-          <!--Danh sách cán bộ-->
-        <!--</div>-->
-        <!--<div class="table-responsive">-->
-          <!--<table class="table table-bordered">-->
-            <!--<thead>-->
-            <!--<tr>-->
-              <!--<th>STT</th>-->
-              <!--<th>Mã cán bộ</th>-->
-              <!--<th>Họ tên</th>-->
-              <!--<th>Ngày sinh</th>-->
-              <!--<th>Tài khoản email</th>-->
-              <!--<th>Username</th>-->
-              <!--<th>Cập nhật</th>-->
-              <!--<th>Xóa</th>-->
-            <!--</tr>-->
-            <!--</thead>-->
-            <!--<tbody>-->
-            <!--&lt;!&ndash;&ndash;&gt;-->
-
-            <!--<tr>-->
-              <!--<td>{{1}}</td>-->
-              <!--<td>{{item.personnelCode}}</td>-->
-              <!--<td>{{item.fullName}}</td>-->
-              <!--<td>{{item.dateOfBirth}}</td>-->
-              <!--<td>{{item.email}}</td>-->
-              <!--<td>{{item.acountSignIn}}</td>-->
-              <!--<td>-->
-                <!--<span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>-->
-              <!--</td>-->
-              <!--<td style="text-align: center">-->
-                <!--<span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>-->
-              <!--</td>-->
-            <!--</tr>-->
-
-            <!--</tbody>-->
-          <!--</table>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  <!--</div>-->
-<!--</form>-->
